todeploy-kubernetes/torrent/sonarr/sonarr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: torrent
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      volumes:
        - name: sonarr-config-volume
          persistentVolumeClaim:
            claimName: sonarr-config-claim
        - name: sonarr-torrent-volume
          persistentVolumeClaim:
            claimName: torrent-data-claim
      containers:
      - name: sonarr
        resources:
        image: linuxserver/sonarr
        ports:
        - name: http
          containerPort: 8989
        volumeMounts:
          - name: sonarr-torrent-volume
            mountPath: /downloads
          - name: sonarr-config-volume
            mountPath: /config
        #   - name: sonarr-config-volume
        #     mountPath: /config/sonarr/sonarr.conf
        #     subPath: sonarr.conf
        #   - name: set-goose-config-volume
        #     mountPath: /goose/set-goose.sh
        #     subPath: set-goose.sh
        #   - name: set-goose-ovpn-volume
        #     mountPath: /etc/openvpn/ro-10.conf
        #     subPath: ro-10.conf
        #   - name: goose-credentials-volume
        #     mountPath: /goose/login.conf
        #     subPath: login.conf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: torrent
spec:
  ports:
  - name: http
    targetPort: 8989
    port: 80
  selector:
    app: sonarr
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarringress
  namespace: torrent
spec:
  rules:
  - host: sonarr.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-lb-service
  namespace: torrent
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8989
  selector:
    app: sonarr
  type: LoadBalancer
  loadBalancerIP: 192.168.6.63


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-non-tls
  namespace: torrent
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`sonarr.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: sonarr
      port: 80
    middlewares:
    - name: http-redirect-to-https
      namespace: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-tls
  namespace: torrent
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`sonarr.bas`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: sonarr
      port: 80
  tls:
    secretName: sonarr-bas-tls
